GitConnector does now feature a "cached" version and is present in the FileProvider - however still not present everywhere in the attachment provider